--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<meta name="description" content="Holtnes Gård på Rødtangen i Hurum">
-<meta name="keywords" content="ved,vedsalg,bjørk,fyring">
-<meta name="author" content="Hege Refsnes">
+<meta name="description" content="Ved levert fra Holtnes Gård på Rødtangen i Hurum">
+<meta name="keywords" content="ved,vedsalg,bjørk,fyring,varme,vedkubber,peis,vedpeis,ildpeis">
+<meta name="author" content="Thomas Kjelsrud">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
 <!--meta http-equiv="cache-control" content="no-cache, must-revalidate, post-check=0, pre-check=0">
@@ -201,8 +201,8 @@
 			<div class="elem">
 				Vi leverer ved fra Holtnes Gård på Rødtangen i Hurum.
 				Vi har drevet med vedproduksjon i over 30 år. Veden blir lagret inne.
-				<img src="img/vedsvein1000x700.jpg" />
-				<img src="img/vedhall1000x470.jpg" />
+				<img src="img/vedhall1000x565.jpg" />
+				<img src="img/plasthall1000x556.jpg" />
 			</div>
 			<div class="elem">
 				<span class="under">Prisliste</span>
