--- a/index.html
+++ b/index.html
@@ -1,16 +1,30 @@
 <html>
-<head>
+	<head>
 <meta charset="UTF-8">
 <meta name="description" content="Ved levert fra Holtnes Gård på Rødtangen i Hurum">
 <meta name="keywords" content="ved,vedsalg,bjørk,fyring,varme,vedkubber,peis,vedpeis,ildpeis">
 <meta name="author" content="Thomas Kjelsrud">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
+<!-- t Global site tag (gtag.js) - Google Analytics -->
+<script type="text/javascript" async="" src="https://www.google-analytics.com/analytics.js"></script><script type="text/javascript" async="" src="https://www.googletagmanager.com/gtag/js?id=G-DXZVF17K81&amp;l=dataLayer&amp;cx=c"></script><script async="" src="https://www.googletagmanager.com/gtag/js?id=UA-84279002-1"></script>
+<script>
+if (location.protocol != 'https:')
+{
+ location.href = 'https:' + window.location.href.substring(window.location.protocol.length);
+}
+
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-84279002-1');
+</script>
+
 <!--meta http-equiv="cache-control" content="no-cache, must-revalidate, post-check=0, pre-check=0">
-<meta http-equiv="expires" content="Sat, 31 Oct 2014 00:00:00 GMT">
 <meta http-equiv="pragma" content="no-cache"-->
 
-<link href="https://fonts.googleapis.com/css?family=Bree+Serif|Lora|Merriweather" rel="stylesheet"> </link>
+<link href="https://fonts.googleapis.com/css?family=Bree+Serif|Lora|Merriweather" rel="stylesheet"> 
 <style>
 	* {margin: 0; padding: 0;}
 
@@ -29,18 +43,21 @@
     	margin-right: auto;
     	text-align: center;
 	}
-	
+
 	#page {
-		width: 100%;
 		height: 100%;
-		margin: 0 auto;
-		background: url("img/woodbg.jpg") repeat;
-		/*background-size: 100%;*/
-		background-attachment: fixed;
-		margin-left: auto;
-    	margin-right: auto;
+		width: 50%;
+    		min-width: 900px;
+    		margin: 0 auto;
+    		background: url(img/woodbg.jpg) repeat;
+    		/* background-size: 100%; */
+    		background-attachment: fixed;
+    		margin-left: auto;
+    		margin-right: auto;
+    		/* background-position-x: 200px; */
 	}
-	
+
+
 	#column {
 		margin-left: auto;
     	margin-right: auto;
@@ -48,7 +65,7 @@
 		max-width: 800px;
 		height: 100%;
 		text-align: left;
-		background: #f9ecec url("img/vedhj200x200.png") no-repeat scroll 0 0;
+		background: #ffe0cf url("img/vedhj200x200.png") no-repeat scroll 0 0;
 		background-position: right bottom;
 		background-size: 20%;
 		border-style: solid;
@@ -58,7 +75,7 @@
 	a {
 		color: #BC6600;
 	}
-	
+
 	.elem {
 		float: left;
 		font-size: 0.95em;
@@ -67,7 +84,7 @@
 		width: 40%;
 		min-width: 260px;
 	}
-	
+
 	.elem img {
 		display: block;
 		width: 100%;
@@ -76,33 +93,33 @@
 		border-color: rgba(50, 50, 50, .5);;
     	border-width: 1px;
 	}
-	
+
 	.wide {
 		width: 60%;
 	}
 	.exwide {
 		width: 80%;
 	}
-	
+
 	.narrow {
 		width: 20%;
 		min-width: 150px;
 		margin-top: 2em;
 		font-size: 0.9em;
-		text-align: right;	
+		text-align: right;
 	}
-	
+
 	.bottom {
 		position: fixed;
 		bottom: 0;
 		/*left: 0;*/
 		/*width: 100%;*/
-		
+
 		margin-top: 1em;
 		padding-bottom: 2em;
 		/*background-color: #CCC;*/
 	}
-	
+
 	@media screen and (max-height: 720px) {
 		.bottom {
 			position: relative;
@@ -114,7 +131,8 @@
 			min-height: 900px;
 		}
 	}
-	@media screen and (max-width: 680px) {
+	@media screen and (max-device-width: 812px) {
+		zoom: 1.0;
 		.bottom {
 			position: relative;
 		}
@@ -143,7 +161,7 @@
 		}
 	}
 
-	
+
 	.title {
 		margin-top: 0.5em;
 		margin-left: 1em;
@@ -152,7 +170,7 @@
 		font-size: 2em;
 		margin-bottom: 1em;
 	}
-	
+
 	.subtitle {
 		font-size: 0.7em;
 		color: #999;
@@ -168,19 +186,19 @@
 		font-size: 0.9em;
 		color: #666;
 	}
-	
+
 	table {
 		font-size: 0.8em;
 		color: #333;
 		margin-top: 1em;
 		margin-bottom: 1em;
 	}
-	
+
 	th {
 		text-align: left;
 		font-weight: bold;
 		background-color: #ffd9b3;
-		
+
 	}
 	th, td {
 		padding: 4px;
@@ -189,68 +207,84 @@
 </style>
 </head>
 
-<body>
+<body cz-shortcut-listen="true">
 	<div id="page">
-	
+
 		<div id="column">
 			<div class="elem title wide">
-				Ved levert fra Holtnes Gård<br/>
+				Ved levert fra Holtnes Gård<br>
 				<span class="subtitle">Asker - Drammen - Hurum - Røyken</span>
 			</div>
-			<div class="elem narrow"><span class="down">tlf</span> 90 08 12 45<br/><a href="post@holtnesved.no">post@holtnesved.no</a></div>
-			<div class="elem">
+
+			<div class="elem narrow"><span class="down">tlf</span> 90 08 12 45<br><a href="mailto:post@holtnesved.no">post@holtnesved.no</a></div>
+      <!--div class="elem title wide" style="color:#a3241d;background-color:#fcc603;width:80%">
+        Vi er tomme for ved i &aring;r - salget av t&oslash;rr ved starter h&oslash;sten 2022
+      </div-->
+      <div class="elem title wide" style="color:#a3241d;background-color:#fcc603;width:80%">
+        Midlertidig stans i mottak av nye bestillinger grunnet stor pågang
+      </div>
+      <div class="elem" style="padding-bottom:50px">
 				Vi leverer ved fra Holtnes Gård på Rødtangen i Hurum.
 				Vi har drevet med vedproduksjon i over 30 år. Veden blir lagret inne.
-				<img src="img/vedhall1000x565.jpg" />
-				<img src="img/plasthall1000x556.jpg" />
+				<img src="img/vedhall1000x565.jpg">
+				<img src="img/plasthall1000x556.jpg">
 			</div>
 			<div class="elem">
 				<span class="under">Prisliste</span>
 				<table>
-					<tr><th>Type</th><th>Vedstørrelse</th><th>Pris kr</th></tr>
-					<tr><td>Bjørk</td><td>25 cm</td><td>1300,-</td></tr>
-					<tr><td>Bjørk</td><td>30 cm</td><td>1250,-</td></tr>
-					<tr><td>Bjørk</td><td>40 cm</td><td>1250,-</td></tr>
-					<tr><td>Blanding</td><td>30 cm</td><td>1000,-</td></tr>
-					<tr><td>Hardved</td><td>30 cm</td><td>1250,-</td></tr>
-				</table>
-				Volum pr enhet er 1600 liter og blir levert med liten tipp bil. Opptil 6 x 1600 liter pr lass.
-				Alle priser er inkl. mva. Oppgjør via bankterminal (bankkort/debit). 
+					<tbody><tr><th>Type</th><th>Vedstørrelse</th><th>Pris kr</th></tr>
+					<tr><td>Bjørk</td><td>25 cm</td><td>2000,-</td></tr>
+					<tr><td>Bjørk</td><td>30 cm</td><td>2000,-</td></tr>
+					<tr><td>Bjørk</td><td>50 cm</td><td>2000,- (pr fast kubikk, m3)</td></tr>
+					<tr><td>Blanding</td><td>30 cm</td><td>1700,-</td></tr>
+					<tr><td>Hardved</td><td>30 cm</td><td>2000,-</td></tr>
+				</tbody></table>
+				<span style="font-size:12px">
+				Volum pr enhet er 1600 liter og blir levert med tippbil eller traktor. Opptil 6 x 1600 liter pr lass.
+				Alle priser er inkl. mva. Oppgjør via bankterminal (bankkort/debit).<br><br>
+				</span>
 			</div>
 			<div class="elem">
 				<span class="under">Frakt</span>
 				<table>
-					<tr><td>Hurum</td><td>300,-</td></tr>
-					<tr><td>Røyken</td><td>400,-</td></tr>
-					<tr><td>Asker</td><td>500,-</td></tr>
-					<tr><td>Drammen</td><td>500,-</td></tr>
-				</table>
+					<tbody><tr><td style="width:55%">Hurum</td><td>200,- pr enhet (1600 liter)</td></tr>
+					<tr><td>Røyken</td><td>300,- pr enhet</td></tr>
+					<tr><td>Asker og Drammen</td><td>etter avtale</td></tr>
+					<!--tr><td>Drammen</td><td>600,-</td></tr-->
+				</tbody></table>
 			</div>
 			<div class="elem">
 				Ved kan også leveres i 40 og 60 liters sekker.
 				<table>
-					<tr><td>Bjørk, 40 liter</td><td>60,-</td></tr>
-					<tr><td>Bjørk, 60 liter</td><td>80,-</td></tr>
-				</table>
+					<tbody><tr><td>Bjørk, 40 liter</td><td>100,-</td></tr>
+					<tr><td>Bjørk, 60 liter</td><td>125,-</td></tr>
+				</tbody></table>
 			</div>
+      <!--div class="elem title wide" style="color:#a3241d;background-color:#fcc603;width:80%">
+        Vi er tomme for ved i &aring;r - salget av t&oslash;rr ved starter h&oslash;sten 2022
+      </div-->
+      <div class="elem title wide" style="color:#a3241d;background-color:#fcc603;width:80%">
+        Midlertidig stans i mottak av nye bestillinger grunnet stor pågang
+      </div>
 			<div class="elem exwide bottom">
 				<div style="float:left"><span class="down">tlf</span> 90 08 12 45 <span class="split">|</span></div>
-				<div style="float:left"><a href="post@holtnesved.no">post@holtnesved.no</a> <span class="split">|</span></div>
+				<div style="float:left"><a href="mailto:post@holtnesved.no">post@holtnesved.no</a> <span class="split">|</span></div>
 				<div style="float:left"><span class="down">Org. Nr 869 285 102</span></div>
 			</div>
 		</div>
-	
+
 	</div>
-	
+
 	<script>
-	<script>
+	<!--script>
 	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
 	  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
 	  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 	  ga('create', 'UA-84279002-1', 'auto');
 	  ga('send', 'pageview');
-	
-	</script>
+
+	</script-->
 </body>
 </html>
+</script></body></html>
