--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ if (location.protocol != 'https:')
 		max-width: 800px;
 		height: 100%;
 		text-align: left;
-		background: #ffe0cf url("img/vedhj200x200.png") no-repeat scroll 0 0;
+		background: #ffe0cf url("img/Forests_Birch_Trees_Trunk_tree_534186_2560x1440.jpg") no-repeat scroll 0 0;
 		background-position: right bottom;
 		background-size: 20%;
 		border-style: solid;
