--- a/index.html
+++ b/index.html
@@ -32,7 +32,6 @@ if (location.protocol != 'https:')
 		height:100%;
 		width: 100%;
 		display: flex;
-  		/*flex-direction: column;*/
 	}
 	body {
 		margin: 0 auto;
@@ -40,8 +39,8 @@ if (location.protocol != 'https:')
 		font-family: 'Merriweather', serif;
 		background-color: #eee;
 		margin-left: auto;
-    	margin-right: auto;
-    	text-align: center;
+		margin-right: auto;
+		text-align: center;
 	}
 
 	#page {
@@ -49,12 +48,12 @@ if (location.protocol != 'https:')
 		width: 50%;
     		min-width: 900px;
     		margin: 0 auto;
-    		background: url(img/woodbg.jpg) repeat;
-    		/* background-size: 100%; */
+    		background: url(img/Forests_Birch_Trees_Trunk_tree_534186_2560x1440.jpg);
+		background-repeat: no-repeat;
+  		background-size: auto;
     		background-attachment: fixed;
     		margin-left: auto;
     		margin-right: auto;
-    		/* background-position-x: 200px; */
 	}
 
 
@@ -65,9 +64,7 @@ if (location.protocol != 'https:')
 		max-width: 800px;
 		height: 100%;
 		text-align: left;
-		background: #ffe0cf url("img/Forests_Birch_Trees_Trunk_tree_534186_2560x1440.jpg") no-repeat scroll 0 0;
-		background-position: right bottom;
-		background-size: 20%;
+		background: #ffe0cf;
 		border-style: solid;
 		border-color: #805500;
     	border-width: 0px 4px 0px 2px;
