--- a/index.html
+++ b/index.html
@@ -217,9 +217,9 @@ if (location.protocol != 'https:')
       <!--div class="elem title wide" style="color:#a3241d;background-color:#fcc603;width:80%">
         Vi er tomme for ved i &aring;r - salget av t&oslash;rr ved starter h&oslash;sten 2022
       </div-->
-      <div class="elem title wide" style="color:#a3241d;background-color:#fcc603;width:80%">
+      <!--div class="elem title wide" style="color:#a3241d;background-color:#fcc603;width:80%">
         Midlertidig stans i mottak av nye bestillinger grunnet stor pågang
-      </div>
+      </div-->
       <div class="elem" style="padding-bottom:50px">
 				Vi leverer ved fra Holtnes Gård på Rødtangen i Hurum.
 				Vi har drevet med vedproduksjon i over 30 år. Veden blir lagret inne.
@@ -230,11 +230,11 @@ if (location.protocol != 'https:')
 				<span class="under">Prisliste</span>
 				<table>
 					<tbody><tr><th>Type</th><th>Vedstørrelse</th><th>Pris kr</th></tr>
-					<tr><td>Bjørk</td><td>25 cm</td><td>2000,-</td></tr>
-					<tr><td>Bjørk</td><td>30 cm</td><td>2000,-</td></tr>
-					<tr><td>Bjørk</td><td>50 cm</td><td>2000,- (pr fast kubikk, m3)</td></tr>
-					<tr><td>Blanding</td><td>30 cm</td><td>1700,-</td></tr>
-					<tr><td>Hardved</td><td>30 cm</td><td>2000,-</td></tr>
+					<tr><td>Bjørk</td><td>25 cm</td><td>2500,-</td></tr>
+					<tr><td>Bjørk</td><td>30 cm</td><td>2500,-</td></tr>
+					<tr><td>Bjørk</td><td>50 cm</td><td>2500,- (pr fast kubikk, m3)</td></tr>
+					<tr><td>Blanding</td><td>30 cm</td><td>2200,-</td></tr>
+					<tr><td>Hardved</td><td>30 cm</td><td>2500,-</td></tr>
 				</tbody></table>
 				<span style="font-size:12px">
 				Volum pr enhet er 1600 liter og blir levert med tippbil eller traktor. Opptil 6 x 1600 liter pr lass.
@@ -244,7 +244,9 @@ if (location.protocol != 'https:')
 			<div class="elem">
 				<span class="under">Frakt</span>
 				<table>
-					<tbody><tr><td style="width:55%">Hurum</td><td>200,- pr enhet (1600 liter)</td></tr>
+					<tbody><tr>
+						<td style="width:55%">Hurum</td>
+						<td>200,- pr enhet (1600 liter)</td></tr>
 					<tr><td>Røyken</td><td>300,- pr enhet</td></tr>
 					<tr><td>Asker og Drammen</td><td>etter avtale</td></tr>
 					<!--tr><td>Drammen</td><td>600,-</td></tr-->
@@ -253,16 +255,16 @@ if (location.protocol != 'https:')
 			<div class="elem">
 				Ved kan også leveres i 40 og 60 liters sekker.
 				<table>
-					<tbody><tr><td>Bjørk, 40 liter</td><td>100,-</td></tr>
-					<tr><td>Bjørk, 60 liter</td><td>125,-</td></tr>
+					<tbody><tr><td>Bjørk, 40 liter</td><td>120,-</td></tr>
+					<tr><td>Bjørk, 60 liter</td><td>150,-</td></tr>
 				</tbody></table>
 			</div>
       <!--div class="elem title wide" style="color:#a3241d;background-color:#fcc603;width:80%">
         Vi er tomme for ved i &aring;r - salget av t&oslash;rr ved starter h&oslash;sten 2022
       </div-->
-      <div class="elem title wide" style="color:#a3241d;background-color:#fcc603;width:80%">
+      <!--div class="elem title wide" style="color:#a3241d;background-color:#fcc603;width:80%">
         Midlertidig stans i mottak av nye bestillinger grunnet stor pågang
-      </div>
+      </div-->
 			<div class="elem exwide bottom">
 				<div style="float:left"><span class="down">tlf</span> 90 08 12 45 <span class="split">|</span></div>
 				<div style="float:left"><a href="mailto:post@holtnesved.no">post@holtnesved.no</a> <span class="split">|</span></div>
