--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@ if (location.protocol != 'https:')
 		margin: 0 auto;
 		width: 100%;
 		font-family: 'Merriweather', serif;
-		background-color: #eee;
+		background: url(img/Forests_Birch_Trees_Trunk_tree_534186_2560x1440.jpg);
+		background-repeat: no-repeat;
 		margin-left: auto;
 		margin-right: auto;
 		text-align: center;
@@ -48,10 +49,6 @@ if (location.protocol != 'https:')
 		width: 50%;
     		min-width: 900px;
     		margin: 0 auto;
-    		background: url(img/Forests_Birch_Trees_Trunk_tree_534186_2560x1440.jpg);
-		background-repeat: no-repeat;
-  		background-size: auto;
-    		background-attachment: fixed;
     		margin-left: auto;
     		margin-right: auto;
 	}
@@ -64,7 +61,7 @@ if (location.protocol != 'https:')
 		max-width: 800px;
 		height: 100%;
 		text-align: left;
-		background: #ffe0cf;
+		background: #F4D475;
 		border-style: solid;
 		border-color: #805500;
     	border-width: 0px 4px 0px 2px;
