--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@ if (location.protocol != 'https:')
 		font-family: 'Merriweather', serif;
 		background: url(img/Forests_Birch_Trees_Trunk_tree_534186_2560x1440.jpg);
 		background-repeat: no-repeat;
+		filter: brightness(70%);
 		margin-left: auto;
 		margin-right: auto;
 		text-align: center;
@@ -47,6 +48,7 @@ if (location.protocol != 'https:')
 	#page {
 		height: 100%;
 		width: 50%;
+		filter: brightness(100%);
     		min-width: 900px;
     		margin: 0 auto;
     		margin-left: auto;
