--- a/index.html
+++ b/index.html
@@ -37,9 +37,8 @@ if (location.protocol != 'https:')
 		margin: 0 auto;
 		width: 100%;
 		font-family: 'Merriweather', serif;
-		background: url(img/Forests_Birch_Trees_Trunk_tree_534186_2560x1440.jpg);
+		background: linear-gradient(rgba(0, 0, 0, 0.50), rgba(0, 0, 0, 0.70)),url(img/Forests_Birch_Trees_Trunk_tree_534186_2560x1440.jpg);
 		background-repeat: no-repeat;
-		filter: brightness(70%);
 		margin-left: auto;
 		margin-right: auto;
 		text-align: center;
@@ -48,7 +47,6 @@ if (location.protocol != 'https:')
 	#page {
 		height: 100%;
 		width: 50%;
-		filter: brightness(100%);
     		min-width: 900px;
     		margin: 0 auto;
     		margin-left: auto;
