--- a/index.html
+++ b/index.html
@@ -56,12 +56,12 @@ if (location.protocol != 'https:')
 
 	#column {
 		margin-left: auto;
-    	margin-right: auto;
+    		margin-right: auto;
 		width: 80%;
 		max-width: 800px;
 		height: 100%;
 		text-align: left;
-		background: #F4D475;
+		background: #ffecb4;
 		border-style: solid;
 		border-color: #805500;
     	border-width: 0px 4px 0px 2px;
