--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <html>
 	<head>
 <meta charset="UTF-8">
+		<title>Ved levert fra Holtnes Gård på Rødtangen i Hurum</title>
 <meta name="description" content="Ved levert fra Holtnes Gård på Rødtangen i Hurum">
-<meta name="keywords" content="ved,vedsalg,bjørk,fyring,varme,vedkubber,peis,vedpeis,ildpeis">
-<meta name="author" content="Thomas Kjelsrud">
+<meta name="keywords" content="ved,vedsalg,bjørk,fyring,varme,vedkubber,peis,vedpeis,ildpeis,asker,viken,bærum,hurum,oslo,drammen,røyken">
+<meta name="author" content="badstudio.no">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
 <!-- t Global site tag (gtag.js) - Google Analytics -->
