--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ if (location.protocol != 'https:')
 		margin: 0 auto;
 		width: 100%;
 		font-family: 'Merriweather', serif;
-		background: linear-gradient(rgba(0, 0, 0, 0.70), rgba(0, 0, 0, 0.90)),url(img/Forests_Birch_Trees_Trunk_tree_534186_2560x1440.jpg);
+		background: url(img/Forests_Birch_Trees_Trunk_tree_534186_2560x1440.jpg);
 		background-repeat: no-repeat;
 		margin-left: auto;
 		margin-right: auto;
