--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta name="description" content="Ved levert fra Holtnes Gård på Rødtangen i Hurum">
 	<meta name="keywords" content="ved,vedsalg,bjørk,fyring,varme,vedkubber,peis,vedpeis,ildpeis,asker,viken,bærum,hurum,oslo,drammen,røyken">
 	<meta name="author" content="badstudio.no">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<!--meta name="viewport" content="width=device-width, initial-scale=1.0"-->
 
 <!-- t Global site tag (gtag.js) - Google Analytics -->
 <script type="text/javascript" async="" src="https://www.google-analytics.com/analytics.js"></script><script type="text/javascript" async="" src="https://www.googletagmanager.com/gtag/js?id=G-DXZVF17K81&amp;l=dataLayer&amp;cx=c"></script><script async="" src="https://www.googletagmanager.com/gtag/js?id=UA-84279002-1"></script>
