--- a/index.html
+++ b/index.html
@@ -201,24 +201,23 @@ if (location.protocol != 'https:')
 
 <body cz-shortcut-listen="true">
 	<div id="page">
-
 		<div id="column">
 			<div class="elem title wide">
 				Ved levert fra Holtnes Gård<br>
 				<span class="subtitle">Asker - Drammen - Hurum - Røyken</span>
 			</div>
-
-			<div class="elem narrow"><span class="down">tlf</span> 90 08 12 45<br><a href="mailto:post@holtnesved.no">post@holtnesved.no</a></div>
-      <!--div class="elem title wide" style="color:#a3241d;background-color:#fcc603;width:80%">
-        Vi er tomme for ved i &aring;r - salget av t&oslash;rr ved starter h&oslash;sten 2022
-      </div-->
-      <!--div class="elem title wide" style="color:#a3241d;background-color:#fcc603;width:80%">
-        Midlertidig stans i mottak av nye bestillinger grunnet stor pågang
-      </div-->
-      <div class="elem" style="padding-bottom:50px">
+			<div class="elem narrow">
+				<span class="down">tlf</span> 90 08 12 45<br><a href="mailto:post@holtnesved.no">post@holtnesved.no</a>
+			</div>
+			<!--div class="elem title wide" style="color:#a3241d;background-color:#fcc603;width:80%">
+			Vi er tomme for ved i &aring;r - salget av t&oslash;rr ved starter h&oslash;sten 2022
+			</div-->
+			<!--div class="elem title wide" style="color:#a3241d;background-color:#fcc603;width:80%">
+			Midlertidig stans i mottak av nye bestillinger grunnet stor pågang
+			</div-->
+			<div class="elem" style="padding-bottom:50px">
 				Vi leverer ved fra Holtnes Gård på Rødtangen i Hurum.
 				Vi har drevet med vedproduksjon i over 30 år. Veden blir lagret inne.
-				<img src="img/vedhall1000x565.jpg">
 				<img src="img/plasthall1000x556.jpg">
 			</div>
 			<div class="elem">
@@ -254,19 +253,18 @@ if (location.protocol != 'https:')
 					<tr><td>Bjørk, 60 liter</td><td>150,-</td></tr>
 				</tbody></table>
 			</div>
-      <!--div class="elem title wide" style="color:#a3241d;background-color:#fcc603;width:80%">
-        Vi er tomme for ved i &aring;r - salget av t&oslash;rr ved starter h&oslash;sten 2022
-      </div-->
-      <!--div class="elem title wide" style="color:#a3241d;background-color:#fcc603;width:80%">
-        Midlertidig stans i mottak av nye bestillinger grunnet stor pågang
-      </div-->
+			<!--div class="elem title wide" style="color:#a3241d;background-color:#fcc603;width:80%">
+			Vi er tomme for ved i &aring;r - salget av t&oslash;rr ved starter h&oslash;sten 2022
+			</div-->
+			<!--div class="elem title wide" style="color:#a3241d;background-color:#fcc603;width:80%">
+			Midlertidig stans i mottak av nye bestillinger grunnet stor pågang
+			</div-->
 			<div class="elem exwide bottom">
 				<div style="float:left"><span class="down">tlf</span> 90 08 12 45 <span class="split">|</span></div>
 				<div style="float:left"><a href="mailto:post@holtnesved.no">post@holtnesved.no</a> <span class="split">|</span></div>
 				<div style="float:left"><span class="down">Org. Nr 869 285 102</span></div>
 			</div>
 		</div>
-
 	</div>
 </body>
 </html>
