--- a/index.html
+++ b/index.html
@@ -130,12 +130,15 @@ if (location.protocol != 'https:')
 		}
 		#column {
 			min-height: 900px;
+			margin-left: auto;
+			margin-right: auto;
+			width: 94%;
 		}
 		#page {
 			min-height: 900px;
 		}
-		#column {
-			width: 94%;
+		.elem {
+			width: 80%;
 		}
 		.narrow {
 			margin-top: 0em;
