--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ if (location.protocol != 'https:')
 	}
 
 	.wide {
-		width: 60%;
+		width: 74%;
 	}
 	.exwide {
 		width: 80%;
@@ -206,6 +206,7 @@ if (location.protocol != 'https:')
 	<div id="page">
 		<div id="column">
 			<div class="elem title wide">
+				<img src="img/fireplace-icon.png" style="width: 48px;float:left;border: 0;margin-right: 10px;margin-top: 10px;" />
 				Ved levert fra Holtnes Gård<br>
 				<span class="subtitle">Asker - Drammen - Hurum - Røyken</span>
 			</div>
