--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@ if (location.protocol != 'https:')
 		font-family: 'Merriweather', serif;
 		background: url(img/Forests_Birch_Trees_Trunk_tree_534186_2560x1440.jpg);
 		background-repeat: no-repeat;
+		background-size: cover;
 		margin-left: auto;
 		margin-right: auto;
 		text-align: center;
