--- a/index.html
+++ b/index.html
@@ -210,6 +210,8 @@ if (location.protocol != 'https:')
 				<img src="img/fireplace-icon.png" style="width: 48px;float:left;border: 0;margin-right: 10px;margin-top: 10px;" />
 				Ved levert fra Holtnes Gård<br>
 				<span class="subtitle">Asker - Drammen - Hurum - Røyken</span>
+			</div>
+			<div class="elem wide">
 				<span class="down">tlf</span> 90 08 12 45<br><a href="mailto:post@holtnesved.no">post@holtnesved.no</a>
 			</div>
 			<!--div class="elem title wide" style="color:#a3241d;background-color:#fcc603;width:80%">
@@ -219,7 +221,7 @@ if (location.protocol != 'https:')
 			Midlertidig stans i mottak av nye bestillinger grunnet stor pågang
 			</div-->
 			<div class="elem wide">
-				<img src="img/plasthall1000x556.jpg" style="width: 112px;float:right;border: 0;margin-right: 10px;margin-top: 10px;" />
+				<img src="img/plasthall1000x556.jpg" style="width: 200px;float:right;border: 0;margin-right: 10px;margin-top: 10px;" />
 				Vi leverer ved fra Holtnes Gård på Rødtangen i Hurum.
 				Vi har drevet med vedproduksjon i over 30 år. Veden blir lagret inne.
 			</div>
