--- a/index.html
+++ b/index.html
@@ -115,12 +115,12 @@ if (location.protocol != 'https:')
 		.bottom {
 			position: relative;
 		}
-		#column {
+		/*#column {
 			min-height: 900px;
 		}
 		#page {
 			min-height: 900px;
-		}
+		}*/
 	}
 	@media screen and (max-device-width: 812px) {
 		zoom: 1.0;
@@ -128,14 +128,14 @@ if (location.protocol != 'https:')
 			position: relative;
 		}
 		#column {
-			min-height: 900px;
+			/*min-height: 900px;*/
 			margin-left: auto;
 			margin-right: auto;
 			width: 94%;
 		}
-		#page {
+		/*#page {
 			min-height: 900px;
-		}
+		}*/
 		.elem {
 			width: 80%;
 		}
@@ -146,14 +146,14 @@ if (location.protocol != 'https:')
 			margin-bottom: 0em;
 		}
 	}
-	@media screen and (max-width: 500px) {
+	/*@media screen and (max-width: 500px) {
 		#column {
 			min-height: 1400px;
 		}
 		#page {
 			min-height: 1400px;
 		}
-	}
+	}*/
 
 
 	.title {
@@ -209,9 +209,6 @@ if (location.protocol != 'https:')
 				Ved levert fra Holtnes Gård<br>
 				<span class="subtitle">Asker - Drammen - Hurum - Røyken</span>
 			</div>
-			<div class="elem wide">
-				<span class="down">tlf</span> 90 08 12 45<br><a href="mailto:post@holtnesved.no">post@holtnesved.no</a>
-			</div>
 			<!--div class="elem title wide" style="color:#a3241d;background-color:#fcc603;width:80%">
 			Vi er tomme for ved i &aring;r - salget av t&oslash;rr ved starter h&oslash;sten 2022
 			</div-->
@@ -219,7 +216,9 @@ if (location.protocol != 'https:')
 			Midlertidig stans i mottak av nye bestillinger grunnet stor pågang
 			</div-->
 			<div class="elem wide">
-				<img src="img/plasthall1000x556.jpg" style="width: 200px;float:right;border: 0;margin-right: 10px;margin-top: 10px;" />
+				<img src="img/plasthall1000x556.jpg" style="width: 240px;float:right;border: 0;margin-right: 10px;margin-top: 10px;" />
+				<span style="font-size: 1.1em;"><span class="down">tlf</span>&nbsp;&nbsp;90 08 12 45&nbsp;&nbsp;&nbsp;<a href="mailto:post@holtnesved.no">post@holtnesved.no</a></span>
+				<br/>
 				Vi leverer ved fra Holtnes Gård på Rødtangen i Hurum.
 				Vi har drevet med vedproduksjon i over 30 år. Veden blir lagret inne.
 			</div>
