--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@ if (location.protocol != 'https:')
     		margin: 0 auto;
     		margin-left: auto;
     		margin-right: auto;
+		min-height: 780px;
 	}
 
 
@@ -71,7 +72,7 @@ if (location.protocol != 'https:')
 		float: left;
 		font-size: 0.95em;
 		padding-top: 1em;
-		padding-left: 2em;
+		padding-left: 1em;
 		width: 40%;
 		min-width: 260px;
 	}
@@ -89,7 +90,7 @@ if (location.protocol != 'https:')
 		width: 74%;
 	}
 	.exwide {
-		width: 80%;
+		width: 90%;
 	}
 
 	.narrow {
@@ -204,7 +205,7 @@ if (location.protocol != 'https:')
 <body cz-shortcut-listen="true">
 	<div id="page">
 		<div id="column">
-			<div class="elem title wide">
+			<div class="elem title exwide">
 				<img src="img/fireplace-icon.png" style="width: 48px;float:left;border: 0;margin-right: 10px;margin-top: 10px;" />
 				Ved levert fra Holtnes Gård<br>
 				<span class="subtitle">Asker - Drammen - Hurum - Røyken</span>
@@ -215,10 +216,11 @@ if (location.protocol != 'https:')
 			<!--div class="elem title wide" style="color:#a3241d;background-color:#fcc603;width:80%">
 			Midlertidig stans i mottak av nye bestillinger grunnet stor pågang
 			</div-->
-			<div class="elem wide">
+			<div class="elem exwide">
 				<img src="img/plasthall1000x556.jpg" style="width: 240px;float:right;border: 0;margin-right: 10px;margin-top: 10px;" />
-				<span style="font-size: 1.1em;"><span class="down">tlf</span>&nbsp;&nbsp;90 08 12 45&nbsp;&nbsp;&nbsp;<a href="mailto:post@holtnesved.no">post@holtnesved.no</a></span>
-				<br/>
+				<span style="font-size: 1.1em;">
+					<span class="down">tlf</span>&nbsp; 90 08 12 45 &nbsp;&nbsp;<a href="mailto:post@holtnesved.no">post@holtnesved.no</a></span>
+				<br/><br/>
 				Vi leverer ved fra Holtnes Gård på Rødtangen i Hurum.
 				Vi har drevet med vedproduksjon i over 30 år. Veden blir lagret inne.
 			</div>
