--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@ if (location.protocol != 'https:')
 			min-height: 900px;
 		}*/
 	}
-	@media screen and (max-device-width: 812px) {
+	@media screen and (max-width: 812px) {
 		zoom: 1.0;
 		.bottom {
 			position: relative;
@@ -263,7 +263,7 @@ if (location.protocol != 'https:')
 			<!--div class="elem title wide" style="color:#a3241d;background-color:#fcc603;width:80%">
 			Midlertidig stans i mottak av nye bestillinger grunnet stor pågang
 			</div-->
-			<div class="elem exwide bottom">
+			<div class="elem exwide">
 				<div style="float:left"><span class="down">tlf</span> 90 08 12 45 <span class="split">|</span></div>
 				<div style="float:left"><a href="mailto:post@holtnesved.no">post@holtnesved.no</a> <span class="split">|</span></div>
 				<div style="float:left"><span class="down">Org. Nr 869 285 102</span></div>
