--- a/index.html
+++ b/index.html
@@ -129,9 +129,7 @@ if (location.protocol != 'https:')
 			position: relative;
 		}
 		#column {
-			/*min-height: 900px;*/
-			margin-left: auto;
-			margin-right: auto;
+			margin-left: 0;
 			width: 94%;
 		}
 		/*#page {
@@ -147,15 +145,6 @@ if (location.protocol != 'https:')
 			margin-bottom: 0em;
 		}
 	}
-	/*@media screen and (max-width: 500px) {
-		#column {
-			min-height: 1400px;
-		}
-		#page {
-			min-height: 1400px;
-		}
-	}*/
-
 
 	.title {
 		margin-top: 0.5em;
