--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@ if (location.protocol != 'https:')
 
   gtag('config', 'UA-84279002-1');
 </script>
+<script type="text/javascript" src="lib/data.js" />
 
 <link href="https://fonts.googleapis.com/css?family=Bree+Serif|Lora|Merriweather" rel="stylesheet"> 
 <style>
