--- a/index.html
+++ b/index.html
@@ -7,21 +7,22 @@
 	<meta name="author" content="badstudio.no">
 	<!--meta name="viewport" content="width=device-width, initial-scale=1.0"-->
 
-<!-- t Global site tag (gtag.js) - Google Analytics -->
-<script type="text/javascript" async="" src="https://www.google-analytics.com/analytics.js"></script><script type="text/javascript" async="" src="https://www.googletagmanager.com/gtag/js?id=G-DXZVF17K81&amp;l=dataLayer&amp;cx=c"></script><script async="" src="https://www.googletagmanager.com/gtag/js?id=UA-84279002-1"></script>
-<script>
-if (location.protocol != 'https:')
-{
- location.href = 'https:' + window.location.href.substring(window.location.protocol.length);
-}
+	<!-- t Global site tag (gtag.js) - Google Analytics -->
+	<script type="text/javascript" async="" src="https://www.google-analytics.com/analytics.js"></script><script type="text/javascript" async="" src="https://www.googletagmanager.com/gtag/js?id=G-DXZVF17K81&amp;l=dataLayer&amp;cx=c"></script><script async="" src="https://www.googletagmanager.com/gtag/js?id=UA-84279002-1"></script>
+	<script>
+	if (location.protocol != 'https:')
+	{
+	 location.href = 'https:' + window.location.href.substring(window.location.protocol.length);
+	}
 
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+	  window.dataLayer = window.dataLayer || [];
+	  function gtag(){dataLayer.push(arguments);}
+	  gtag('js', new Date());
 
-  gtag('config', 'UA-84279002-1');
-</script>
-<script type="text/javascript" src="lib/data.js" />
+	  gtag('config', 'UA-84279002-1');
+	</script>
+		
+		<script src="/lib/data.js"></script>
 
 <link href="https://fonts.googleapis.com/css?family=Bree+Serif|Lora|Merriweather" rel="stylesheet"> 
 <style>
