--- a/index.html
+++ b/index.html
@@ -207,13 +207,15 @@
 			<!--div class="elem title wide" style="color:#a3241d;background-color:#fcc603;width:80%">
 			Midlertidig stans i mottak av nye bestillinger grunnet stor pågang
 			</div-->
-			<div class="elem exwide">
-				<img src="img/plasthall1000x556.jpg" style="width: 240px;float:right;border: 0;margin-right: 10px;margin-top: 10px;" />
+			<div class="elem">
 				<span style="font-size: 1.1em;">
-					<span class="down">tlf</span>&nbsp; 90 08 12 45 &nbsp;&nbsp;<a href="mailto:post@holtnesved.no">post@holtnesved.no</a></span>
+					<span class="down">tlf</span>&nbsp; 90 08 12 45 <br/><a href="mailto:post@holtnesved.no">post@holtnesved.no</a></span>
 				<br/><br/>
 				Vi leverer ved fra Holtnes Gård på Rødtangen i Hurum.
 				Vi har drevet med vedproduksjon i over 30 år. Veden blir lagret inne.
+			</div>
+			<div class="elem">
+				<img src="img/plasthall1000x556.jpg" style="width: 360px;border: 0;" />
 			</div>
 			<div class="elem">
 				<span class="under">Prisliste</span>
