--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 		float: left;
 		font-size: 0.95em;
 		padding-top: 1em;
-		padding-left: 1.5em;
+		padding-left: 2em;
 		width: 40%;
 		min-width: 260px;
 	}
@@ -215,7 +215,7 @@
 				Vi har drevet med vedproduksjon i over 30 år. Veden blir lagret inne.
 			</div>
 			<div class="elem">
-				<img src="img/plasthall1000x556.jpg" style="width: 360px;border: 0;" />
+				<img src="img/plasthall1000x556.jpg" style="width: 320px;" />
 			</div>
 			<div class="elem">
 				<span class="under">Prisliste</span>
