--- a/index.html
+++ b/index.html
@@ -201,12 +201,14 @@
 				Ved levert fra Holtnes Gård<br>
 				<span class="subtitle">Asker - Drammen - Hurum - Røyken</span>
 			</div>
-			<!--div class="elem title wide" style="color:#a3241d;background-color:#fcc603;width:80%">
-			Vi er tomme for ved i &aring;r - salget av t&oslash;rr ved starter h&oslash;sten 2022
-			</div-->
-			<!--div class="elem title wide" style="color:#a3241d;background-color:#fcc603;width:80%">
-			Midlertidig stans i mottak av nye bestillinger grunnet stor pågang
-			</div-->
+			<div id="data-melding-topp">
+				<!--div class="elem title wide" style="color:#a3241d;background-color:#fcc603;width:80%">
+				Vi er tomme for ved i &aring;r - salget av t&oslash;rr ved starter h&oslash;sten 2022
+				</div-->
+				<!--div class="elem title wide" style="color:#a3241d;background-color:#fcc603;width:80%">
+				Midlertidig stans i mottak av nye bestillinger grunnet stor pågang
+				</div-->
+			</div>
 			<div class="elem">
 				<span style="font-size: 1.1em;">
 					<span class="down">tlf</span>&nbsp; 90 08 12 45 <br/><a href="mailto:post@holtnesved.no">post@holtnesved.no</a></span>
@@ -219,14 +221,14 @@
 			</div>
 			<div class="elem">
 				<span class="under">Prisliste</span>
-				<table>
-					<tbody><tr><th>Type</th><th>Vedstørrelse</th><th>Pris kr</th></tr>
+				<table id="data-prisliste">
+					<tr><th>Type</th><th>Vedstørrelse</th><th>Pris kr</th></tr>
 					<tr><td>Bjørk</td><td>25 cm</td><td>2500,-</td></tr>
 					<tr><td>Bjørk</td><td>30 cm</td><td>2500,-</td></tr>
 					<tr><td>Bjørk</td><td>50 cm</td><td>2500,- (pr fast kubikk, m3)</td></tr>
 					<tr><td>Blanding</td><td>30 cm</td><td>2200,-</td></tr>
 					<tr><td>Hardved</td><td>30 cm</td><td>2500,-</td></tr>
-				</tbody></table>
+				</table>
 				<span style="font-size:12px">
 				Volum pr enhet er 1600 liter og blir levert med tippbil eller traktor. Opptil 6 x 1600 liter pr lass.
 				Alle priser er inkl. mva. Oppgjør via bankterminal (bankkort/debit).<br><br>
@@ -234,28 +236,28 @@
 			</div>
 			<div class="elem">
 				<span class="under">Frakt</span>
-				<table>
-					<tbody><tr>
-						<td style="width:55%">Hurum</td>
-						<td>200,- pr enhet (1600 liter)</td></tr>
+				<table id="data-frakt">
+					<tr><td style="width:55%">Hurum</td>
+					<td>200,- pr enhet (1600 liter)</td></tr>
 					<tr><td>Røyken</td><td>300,- pr enhet</td></tr>
 					<tr><td>Asker og Drammen</td><td>etter avtale</td></tr>
-					<!--tr><td>Drammen</td><td>600,-</td></tr-->
-				</tbody></table>
+				</table>
 			</div>
 			<div class="elem">
 				Ved kan også leveres i 40 og 60 liters sekker.
-				<table>
-					<tbody><tr><td>Bjørk, 40 liter</td><td>120,-</td></tr>
+				<table id="data-sekker">
+					<tr><td>Bjørk, 40 liter</td><td>120,-</td></tr>
 					<tr><td>Bjørk, 60 liter</td><td>150,-</td></tr>
-				</tbody></table>
+				</table>
 			</div>
-			<!--div class="elem title wide" style="color:#a3241d;background-color:#fcc603;width:80%">
-			Vi er tomme for ved i &aring;r - salget av t&oslash;rr ved starter h&oslash;sten 2022
-			</div-->
-			<!--div class="elem title wide" style="color:#a3241d;background-color:#fcc603;width:80%">
-			Midlertidig stans i mottak av nye bestillinger grunnet stor pågang
-			</div-->
+			<div id="data-melding-bunn">
+				<!--div class="elem title wide" style="color:#a3241d;background-color:#fcc603;width:80%">
+				Vi er tomme for ved i &aring;r - salget av t&oslash;rr ved starter h&oslash;sten 2022
+				</div-->
+				<!--div class="elem title wide" style="color:#a3241d;background-color:#fcc603;width:80%">
+				Midlertidig stans i mottak av nye bestillinger grunnet stor pågang
+				</div-->
+			</div>
 			<div class="elem exwide">
 				<div style="float:left"><span class="down">tlf</span> 90 08 12 45 <span class="split">|</span></div>
 				<div style="float:left"><a href="mailto:post@holtnesved.no">post@holtnesved.no</a> <span class="split">|</span></div>
