--- a/index.html
+++ b/index.html
@@ -134,9 +134,9 @@
 			margin-left: 0;
 			width: 94%;
 		}
-		/*#page {
-			min-height: 900px;
-		}*/
+		#page {
+			min-height: 980px;
+		}
 		.elem {
 			width: 80%;
 		}
