--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
 			</div>
 			<div class="elem">
 				<span class="under">Prisliste</span>
-				<table id="data-prisliste">
+				<table id="#DATA-PRISLISTE">
 					<tr><th>Type</th><th>Vedstørrelse</th><th>Pris kr</th></tr>
 					<tr><td>Bjørk</td><td>25 cm</td><td>2500,-</td></tr>
 					<tr><td>Bjørk</td><td>30 cm</td><td>2500,-</td></tr>
@@ -236,7 +236,7 @@
 			</div>
 			<div class="elem">
 				<span class="under">Frakt</span>
-				<table id="data-frakt">
+				<table id="#DATA-FRAKT">
 					<tr><td style="width:55%">Hurum</td>
 					<td>200,- pr enhet (1600 liter)</td></tr>
 					<tr><td>Røyken</td><td>300,- pr enhet</td></tr>
@@ -245,7 +245,7 @@
 			</div>
 			<div class="elem">
 				Ved kan også leveres i 40 og 60 liters sekker.
-				<table id="data-sekker">
+				<table id="#DATA-SEKKER">
 					<tr><td>Bjørk, 40 liter</td><td>120,-</td></tr>
 					<tr><td>Bjørk, 60 liter</td><td>150,-</td></tr>
 				</table>
