--- a/index.html
+++ b/index.html
@@ -223,11 +223,11 @@
 				<span class="under">Prisliste</span>
 				<table id="#DATA-PRISLISTE">
 					<tr><th>Type</th><th>Vedstørrelse</th><th>Pris kr</th></tr>
-					<tr><td>Bjørk</td><td>25 cm</td><td>2500,-</td></tr>
+					<!--tr><td>Bjørk</td><td>25 cm</td><td>2500,-</td></tr>
 					<tr><td>Bjørk</td><td>30 cm</td><td>2500,-</td></tr>
 					<tr><td>Bjørk</td><td>50 cm</td><td>2500,- (pr fast kubikk, m3)</td></tr>
 					<tr><td>Blanding</td><td>30 cm</td><td>2200,-</td></tr>
-					<tr><td>Hardved</td><td>30 cm</td><td>2500,-</td></tr>
+					<tr><td>Hardved</td><td>30 cm</td><td>2500,-</td></tr-->
 				</table>
 				<span style="font-size:12px">
 				Volum pr enhet er 1600 liter og blir levert med tippbil eller traktor. Opptil 6 x 1600 liter pr lass.
@@ -237,17 +237,16 @@
 			<div class="elem">
 				<span class="under">Frakt</span>
 				<table id="#DATA-FRAKT">
-					<tr><td style="width:55%">Hurum</td>
-					<td>200,- pr enhet (1600 liter)</td></tr>
+					<!--tr><td style="width:55%">Hurum</td><td>200,- pr enhet (1600 liter)</td></tr>
 					<tr><td>Røyken</td><td>300,- pr enhet</td></tr>
-					<tr><td>Asker og Drammen</td><td>etter avtale</td></tr>
+					<tr><td>Asker og Drammen</td><td>etter avtale</td></tr-->
 				</table>
 			</div>
 			<div class="elem">
 				Ved kan også leveres i 40 og 60 liters sekker.
 				<table id="#DATA-SEKKER">
-					<tr><td>Bjørk, 40 liter</td><td>120,-</td></tr>
-					<tr><td>Bjørk, 60 liter</td><td>150,-</td></tr>
+					<!--tr><td>Bjørk, 40 liter</td><td>120,-</td></tr>
+					<tr><td>Bjørk, 60 liter</td><td>150,-</td></tr-->
 				</table>
 			</div>
 			<div id="data-melding-bunn">
