--- a/index.html
+++ b/index.html
@@ -208,6 +208,9 @@
 				<!--div class="elem title wide" style="color:#a3241d;background-color:#fcc603;width:80%">
 				Midlertidig stans i mottak av nye bestillinger grunnet stor pågang
 				</div-->
+				<div class="elem title wide" style="color:#a3241d;background-color:#fcc603;width:80%">
+				Stans i mottak av nye bestillinger da vi er utsolgt
+				</div>
 			</div>
 			<div class="elem">
 				<span style="font-size: 1.1em;">
@@ -256,6 +259,9 @@
 				<!--div class="elem title wide" style="color:#a3241d;background-color:#fcc603;width:80%">
 				Midlertidig stans i mottak av nye bestillinger grunnet stor pågang
 				</div-->
+				<div class="elem title wide" style="color:#a3241d;background-color:#fcc603;width:80%">
+				Stans i mottak av nye bestillinger da vi er utsolgt
+				</div>
 			</div>
 			<div class="elem exwide">
 				<div style="float:left"><span class="down">tlf</span> 90 08 12 45 <span class="split">|</span></div>
