--- a/index.html
+++ b/index.html
@@ -208,9 +208,9 @@
 				<!--div class="elem title wide" style="color:#a3241d;background-color:#fcc603;width:80%">
 				Midlertidig stans i mottak av nye bestillinger grunnet stor pågang
 				</div-->
-				<div class="elem title wide" style="color:#a3241d;background-color:#fcc603;width:80%">
+				<!--div class="elem title wide" style="color:#a3241d;background-color:#fcc603;width:80%">
 				Stans i mottak av nye bestillinger da vi er utsolgt
-				</div>
+				</div-->
 			</div>
 			<div class="elem">
 				<span style="font-size: 1.1em;">
@@ -239,10 +239,11 @@
 			</div>
 			<div class="elem">
 				<span class="under">Frakt</span>
+				<span>400,- minstesats ved levering med lastebil</span>
 				<table id="#DATA-FRAKT">
-					<!--tr><td style="width:55%">Hurum</td><td>200,- pr enhet (1600 liter)</td></tr>
+					<tr><td style="width:55%">Hurum</td><td>Mindre leveringer 200,- pr enhet (1600 liter)</td></tr>
 					<tr><td>Røyken</td><td>300,- pr enhet</td></tr>
-					<tr><td>Asker og Drammen</td><td>etter avtale</td></tr-->
+					<tr><td>Asker og Drammen</td><td>etter avtale</td></tr>
 				</table>
 			</div>
 			<div class="elem">
@@ -259,9 +260,9 @@
 				<!--div class="elem title wide" style="color:#a3241d;background-color:#fcc603;width:80%">
 				Midlertidig stans i mottak av nye bestillinger grunnet stor pågang
 				</div-->
-				<div class="elem title wide" style="color:#a3241d;background-color:#fcc603;width:80%">
+				<!--div class="elem title wide" style="color:#a3241d;background-color:#fcc603;width:80%">
 				Stans i mottak av nye bestillinger da vi er utsolgt
-				</div>
+				</div-->
 			</div>
 			<div class="elem exwide">
 				<div style="float:left"><span class="down">tlf</span> 90 08 12 45 <span class="split">|</span></div>
