--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
 				</span>
 			</div>
 			<div class="elem">
-				<span class="under">Frakt</span>
+				<span class="under">Frakt</span><br/>
 				<span>400,- minstesats ved levering med lastebil</span>
 				<table id="#DATA-FRAKT">
 					<tr><td style="width:55%">Hurum</td><td>Mindre leveringer 200,- pr enhet (1600 liter)</td></tr>
